--- a/absensi.html
+++ b/absensi.html
@@ -217,13 +217,21 @@
   const dataUrl = canvas.toDataURL("image/jpeg", 0.85);
   lastSnapshot = dataUrl;
 
+  const now = new Date();
+infoName.textContent = employeeName.value || "-";
+infoTime.textContent = now.toLocaleString("id-ID");
+infoStatus.textContent = evaluateStatus(now);
+infoStatus.className =
+  evaluateStatus(now) === "Hadir"
+    ? "text-green-600 font-semibold"
+    : "text-red-600 font-semibold";
+
+infoImg.src = dataUrl;
+
+
   // ✅ TAMPILKAN PREVIEW FOTO
   photoPreview.src = dataUrl;
   photoPreviewWrap.classList.remove("hidden");
-
-  // ✅ LANGSUNG TAMPILKAN PREVIEW DATA
-  const now = new Date();
-  const status = evaluateStatus(now);
 
   infoName.textContent = employeeName.value;
   infoTime.textContent = now.toLocaleString("id-ID");
@@ -262,12 +270,18 @@
       };
 
       try {
-        const res = await fetch(API_URL, {
+     const formData = new URLSearchParams();
+formData.append("id", Date.now());
+formData.append("nama", name);
+formData.append("tanggal", now.toISOString().slice(0, 10));
+formData.append("waktu", now.toLocaleTimeString("id-ID"));
+formData.append("status", evaluateStatus(now));
+
+const res = await fetch(API_URL, {
   method: "POST",
-  headers: { "Content-Type": "application/json" },
-  redirect: "follow",
-  body: JSON.stringify(payload)
+  body: formData
 });
+
 
         if (!res.ok) {
           const txt = await res.text().catch(()=>"(no body)");
